--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_empleadoincapacidad.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_empleadoincapacidad.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="10" uuid="c79f703b-bf01-4865-bd2b-701eb356ba3a">
 	<property name="ireport.zoom" value="1.6105100000000017"/>
-	<property name="ireport.x" value="703"/>
-	<property name="ireport.y" value="81"/>
+	<property name="ireport.x" value="170"/>
+	<property name="ireport.y" value="70"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -60,7 +60,7 @@ inner join incapacidad i on e.codigoempleado=i.codigoempleado WHERE i.fechadesde
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Reporte de Empleados Con incapaciad]]></text>
+				<text><![CDATA[Reporte de empleados con incapacidad]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
 				<reportElement x="146" y="65" width="100" height="14" uuid="04e4df16-4b67-4340-8a24-945fe1331771"/>
@@ -70,42 +70,42 @@ inner join incapacidad i on e.codigoempleado=i.codigoempleado WHERE i.fechadesde
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="638" y="64" width="61" height="15" uuid="c42b5a94-d56f-415b-9967-63beca281b2d"/>
+				<reportElement x="648" y="64" width="61" height="15" uuid="c42b5a94-d56f-415b-9967-63beca281b2d"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Página "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="717" y="64" width="35" height="15" uuid="0079daa6-1363-4574-a3cf-8cb78dec494e"/>
+				<reportElement x="714" y="64" width="35" height="15" uuid="0079daa6-1363-4574-a3cf-8cb78dec494e"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="324" y="64" width="30" height="14" uuid="46e35f03-e614-451b-9ee7-b3d1e73cdf93"/>
+				<reportElement x="317" y="64" width="30" height="14" uuid="46e35f03-e614-451b-9ee7-b3d1e73cdf93"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="403" y="64" width="30" height="14" uuid="3e1a0d6d-d4bc-49c7-be68-31d48017ee8f"/>
+				<reportElement x="404" y="64" width="30" height="14" uuid="3e1a0d6d-d4bc-49c7-be68-31d48017ee8f"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="349" y="64" width="53" height="14" uuid="fe98f365-d451-4cbf-8c21-ba4984bac98e"/>
+				<reportElement x="347" y="64" width="53" height="14" uuid="fe98f365-d451-4cbf-8c21-ba4984bac98e"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="692" y="53" width="81" height="14" uuid="c2464fff-bc9f-4c3b-a4aa-56a405eea00c"/>
+				<reportElement x="697" y="53" width="81" height="14" uuid="c2464fff-bc9f-4c3b-a4aa-56a405eea00c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -116,7 +116,7 @@ inner join incapacidad i on e.codigoempleado=i.codigoempleado WHERE i.fechadesde
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Fecha de Generacion:]]></text>
+				<text><![CDATA[Fecha de Generación:]]></text>
 			</staticText>
 			<image>
 				<reportElement x="47" y="0" width="80" height="70" uuid="d5244a04-208d-4ef9-bc04-8c758f3c1f28"/>
@@ -127,18 +127,18 @@ inner join incapacidad i on e.codigoempleado=i.codigoempleado WHERE i.fechadesde
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="377" y="33" width="66" height="15" uuid="7048bb48-5bd3-4523-954e-6d75beaee769"/>
+				<reportElement x="374" y="33" width="66" height="15" uuid="7048bb48-5bd3-4523-954e-6d75beaee769"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="349" y="18" width="135" height="15" uuid="ff276982-a8e2-4630-862b-199b523e2b30"/>
+				<reportElement x="346" y="18" width="135" height="15" uuid="ff276982-a8e2-4630-862b-199b523e2b30"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Direccion de Recursos Humanos]]></text>
+				<text><![CDATA[Dirección de Recursos Humanos]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="325" y="4" width="172" height="15" uuid="18a5c2ea-07e8-4059-bb1d-26a112f366be"/>
@@ -148,21 +148,21 @@ inner join incapacidad i on e.codigoempleado=i.codigoempleado WHERE i.fechadesde
 				<text><![CDATA[Ministerio de Justicia  y Segurdiad Pública]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="429" y="64" width="49" height="14" uuid="689ef65a-c28c-4309-a567-86b3627c4c96"/>
+				<reportElement x="433" y="64" width="49" height="14" uuid="689ef65a-c28c-4309-a567-86b3627c4c96"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="50" y="46" width="100" height="20" uuid="389c1719-9f3d-441e-9550-b92970e4a3f4"/>
+				<reportElement x="50" y="51" width="100" height="20" uuid="389c1719-9f3d-441e-9550-b92970e4a3f4"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_eminc]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="662" y="53" width="30" height="14" uuid="8f4080e8-dbe2-4b30-9f43-82f8fbabddf6"/>
+				<reportElement x="662" y="53" width="35" height="14" uuid="8f4080e8-dbe2-4b30-9f43-82f8fbabddf6"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -173,7 +173,7 @@ inner join incapacidad i on e.codigoempleado=i.codigoempleado WHERE i.fechadesde
 	<columnHeader>
 		<band height="16" splitType="Stretch">
 			<rectangle>
-				<reportElement x="43" y="0" width="716" height="14" backcolor="#FFFFFF" uuid="47f87b1b-4db2-4d10-b77e-5c9c9f4a3b62"/>
+				<reportElement x="43" y="0" width="720" height="14" backcolor="#FFFFFF" uuid="47f87b1b-4db2-4d10-b77e-5c9c9f4a3b62"/>
 			</rectangle>
 			<staticText>
 				<reportElement x="47" y="0" width="71" height="14" uuid="e3dcf82b-5ff6-4cd8-beed-a789d18846ba"/>
@@ -199,67 +199,67 @@ inner join incapacidad i on e.codigoempleado=i.codigoempleado WHERE i.fechadesde
 				<text><![CDATA[Incapacidad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="290" y="0" width="35" height="14" uuid="9d96dc8a-c06d-411c-bb3a-a1e4467caa4c"/>
-				<textElement>
+				<reportElement x="302" y="0" width="35" height="14" uuid="9d96dc8a-c06d-411c-bb3a-a1e4467caa4c"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Dui]]></text>
+				<text><![CDATA[DUI]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="359" y="0" width="45" height="14" uuid="42c43dd0-1a54-41f2-975b-7f860b69ce88"/>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="419" y="0" width="34" height="14" uuid="71d15c92-ff7a-4324-a543-da4a1c2a0dd6"/>
-				<textElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="527" y="0" width="40" height="14" uuid="694ba7b8-be21-4b77-add5-7ee34c5c34f8"/>
-				<textElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Tipo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="462" y="0" width="39" height="14" uuid="a4a06052-7efe-4ad2-8e94-96507826b9aa"/>
-				<textElement>
+				<reportElement x="470" y="0" width="39" height="14" uuid="a4a06052-7efe-4ad2-8e94-96507826b9aa"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[ISSS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="569" y="0" width="73" height="14" uuid="be7e5970-6ebd-4786-8308-9a86eeef148c"/>
-				<textElement>
+				<reportElement x="570" y="0" width="80" height="14" uuid="be7e5970-6ebd-4786-8308-9a86eeef148c"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Forma Incapacidad]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="656" y="0" width="38" height="14" uuid="89473ce8-fc51-49d5-8bb8-9e6039c10e4a"/>
-				<textElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[subsidio]]></text>
+				<text><![CDATA[SubSidio]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="209" y="0" width="54" height="14" uuid="f85ecaa9-4240-4aa9-b830-6b8a114a9cf0"/>
-				<textElement>
+				<reportElement x="212" y="0" width="54" height="14" uuid="f85ecaa9-4240-4aa9-b830-6b8a114a9cf0"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Puesto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="702" y="0" width="57" height="14" uuid="e6d1a9ad-0945-449c-8284-4ab6a43d2af5"/>
-				<textElement>
+				<reportElement x="702" y="0" width="76" height="14" uuid="e6d1a9ad-0945-449c-8284-4ab6a43d2af5"/>
+				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Fecha Emision]]></text>
+				<text><![CDATA[Fecha Emisión]]></text>
 			</staticText>
 			<line>
 				<reportElement x="118" y="0" width="1" height="14" uuid="52f28059-598c-4499-8cfa-fe8382f639a2"/>
@@ -277,7 +277,7 @@ inner join incapacidad i on e.codigoempleado=i.codigoempleado WHERE i.fechadesde
 				<reportElement x="461" y="0" width="1" height="14" uuid="153ccd9d-3432-4044-af05-7acaf3001689"/>
 			</line>
 			<line>
-				<reportElement x="647" y="0" width="1" height="14" uuid="c4fcf880-abce-49ec-a547-3b2558cd2771"/>
+				<reportElement x="654" y="0" width="1" height="14" uuid="c4fcf880-abce-49ec-a547-3b2558cd2771"/>
 			</line>
 			<line>
 				<reportElement x="695" y="0" width="1" height="14" uuid="ae85246c-fe37-4f4a-94b0-6dbd981df34d"/>
@@ -294,14 +294,14 @@ inner join incapacidad i on e.codigoempleado=i.codigoempleado WHERE i.fechadesde
 				<textFieldExpression><![CDATA[$F{Empleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="125" y="0" width="82" height="28" uuid="b5d283ea-4282-438d-92b9-2337220a13ed"/>
+				<reportElement x="125" y="0" width="80" height="28" uuid="b5d283ea-4282-438d-92b9-2337220a13ed"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombreincapacidad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="209" y="0" width="80" height="28" uuid="27473eb0-f9a7-408d-bba4-15b7952f70dc"/>
+				<reportElement x="212" y="0" width="77" height="28" uuid="27473eb0-f9a7-408d-bba4-15b7952f70dc"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -316,7 +316,7 @@ inner join incapacidad i on e.codigoempleado=i.codigoempleado WHERE i.fechadesde
 			</textField>
 			<textField>
 				<reportElement x="478" y="0" width="46" height="28" uuid="70cbff8e-5b9f-4571-985c-211a23025c4e"/>
-				<textElement>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{numerofichaisss}]]></textFieldExpression>
@@ -336,14 +336,14 @@ inner join incapacidad i on e.codigoempleado=i.codigoempleado WHERE i.fechadesde
 				<textFieldExpression><![CDATA[$F{formaincapacidad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="657" y="0" width="35" height="28" uuid="01dc6839-7fcf-479c-9957-77dab68b8ab5"/>
+				<reportElement x="655" y="0" width="35" height="28" uuid="01dc6839-7fcf-479c-9957-77dab68b8ab5"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{subsidio}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="362" y="0" width="48" height="28" uuid="a390e6c2-f3b6-461b-bdd8-9eb4f8a4be91"/>
+				<reportElement x="358" y="0" width="48" height="28" uuid="a390e6c2-f3b6-461b-bdd8-9eb4f8a4be91"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -351,14 +351,14 @@ inner join incapacidad i on e.codigoempleado=i.codigoempleado WHERE i.fechadesde
 			</textField>
 			<textField>
 				<reportElement x="702" y="0" width="50" height="28" uuid="a690e69e-916a-4efb-ba48-dd383c89425c"/>
-				<textElement>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Fecha Emision}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="290" y="0" width="64" height="28" uuid="cd4afe84-7cf5-492d-9e71-5987946288c0"/>
-				<textElement>
+				<reportElement x="288" y="0" width="64" height="28" uuid="cd4afe84-7cf5-492d-9e71-5987946288c0"/>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{duiempleado}]]></textFieldExpression>
@@ -374,7 +374,7 @@ inner join incapacidad i on e.codigoempleado=i.codigoempleado WHERE i.fechadesde
 	<summary>
 		<band height="42" splitType="Stretch">
 			<line>
-				<reportElement x="37" y="5" width="712" height="1" uuid="93ec930f-20ed-4bf3-bdb8-4b4c946d7e95"/>
+				<reportElement x="37" y="5" width="717" height="1" uuid="93ec930f-20ed-4bf3-bdb8-4b4c946d7e95"/>
 			</line>
 			<textField isStretchWithOverflow="true" pattern="###0">
 				<reportElement mode="Opaque" x="656" y="7" width="98" height="13" backcolor="#FFFFFF" uuid="d6e8039f-e0be-4d17-98f6-ed8f444238dc"/>
