--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_comisiones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_comisiones.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="10" uuid="c79f703b-bf01-4865-bd2b-701eb356ba3a">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="143"/>
+	<property name="ireport.x" value="83"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -41,7 +41,7 @@
 		<band height="20" splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="87" splitType="Stretch">
+		<band height="85" splitType="Stretch">
 			<staticText>
 				<reportElement x="328" y="53" width="102" height="14" uuid="d2820ed1-563c-4556-97e7-7f9324cc9b90"/>
 				<textElement>
@@ -50,84 +50,84 @@
 				<text><![CDATA[Reporte de Comisiones]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="188" y="73" width="65" height="14" uuid="04e4df16-4b67-4340-8a24-945fe1331771"/>
+				<reportElement x="188" y="71" width="65" height="14" uuid="04e4df16-4b67-4340-8a24-945fe1331771"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="605" y="50" width="61" height="17" uuid="c42b5a94-d56f-415b-9967-63beca281b2d"/>
+				<reportElement x="606" y="68" width="61" height="17" uuid="c42b5a94-d56f-415b-9967-63beca281b2d"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Página "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="674" y="50" width="35" height="17" uuid="0079daa6-1363-4574-a3cf-8cb78dec494e"/>
+				<reportElement x="673" y="68" width="35" height="17" uuid="0079daa6-1363-4574-a3cf-8cb78dec494e"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="281" y="72" width="34" height="14" uuid="46e35f03-e614-451b-9ee7-b3d1e73cdf93"/>
+				<reportElement x="281" y="70" width="34" height="14" uuid="46e35f03-e614-451b-9ee7-b3d1e73cdf93"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="375" y="72" width="35" height="14" uuid="3e1a0d6d-d4bc-49c7-be68-31d48017ee8f"/>
+				<reportElement x="375" y="70" width="35" height="14" uuid="3e1a0d6d-d4bc-49c7-be68-31d48017ee8f"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="314" y="72" width="49" height="14" uuid="fe98f365-d451-4cbf-8c21-ba4984bac98e"/>
+				<reportElement x="314" y="70" width="49" height="14" uuid="fe98f365-d451-4cbf-8c21-ba4984bac98e"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="402" y="72" width="57" height="14" uuid="689ef65a-c28c-4309-a567-86b3627c4c96"/>
+				<reportElement x="402" y="70" width="57" height="14" uuid="689ef65a-c28c-4309-a567-86b3627c4c96"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="95" y="59" width="100" height="17" uuid="389c1719-9f3d-441e-9550-b92970e4a3f4"/>
+				<reportElement x="95" y="57" width="100" height="17" uuid="389c1719-9f3d-441e-9550-b92970e4a3f4"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_comis]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="617" y="65" width="44" height="17" uuid="8f4080e8-dbe2-4b30-9f43-82f8fbabddf6"/>
+				<reportElement x="617" y="54" width="44" height="17" uuid="8f4080e8-dbe2-4b30-9f43-82f8fbabddf6"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="652" y="65" width="81" height="17" uuid="c2464fff-bc9f-4c3b-a4aa-56a405eea00c"/>
+				<reportElement x="655" y="55" width="81" height="17" uuid="c2464fff-bc9f-4c3b-a4aa-56a405eea00c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="95" y="73" width="90" height="14" uuid="56b210b9-a783-49f8-9ce4-5ab259f720b2"/>
+				<reportElement x="95" y="71" width="90" height="14" uuid="56b210b9-a783-49f8-9ce4-5ab259f720b2"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Fecha de Generacion:]]></text>
+				<text><![CDATA[Fecha de Generación:]]></text>
 			</staticText>
 			<image>
-				<reportElement x="617" y="0" width="70" height="70" uuid="757880b3-ddc9-4fcd-9ec0-2b4cae2e48bb"/>
+				<reportElement x="617" y="4" width="70" height="70" uuid="757880b3-ddc9-4fcd-9ec0-2b4cae2e48bb"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<image>
@@ -139,7 +139,7 @@
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Direccion de Recursos Humanos]]></text>
+				<text><![CDATA[Dirección de Recursos Humanos]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="293" y="4" width="211" height="17" uuid="18a5c2ea-07e8-4059-bb1d-26a112f366be"/>
@@ -160,7 +160,7 @@
 	<columnHeader>
 		<band height="14" splitType="Stretch">
 			<rectangle>
-				<reportElement x="93" y="0" width="597" height="14" backcolor="#FFFFFF" uuid="47f87b1b-4db2-4d10-b77e-5c9c9f4a3b62"/>
+				<reportElement x="99" y="0" width="609" height="14" backcolor="#FFFFFF" uuid="47f87b1b-4db2-4d10-b77e-5c9c9f4a3b62"/>
 			</rectangle>
 			<line>
 				<reportElement x="225" y="0" width="1" height="14" uuid="c4fcf880-abce-49ec-a547-3b2558cd2771"/>
@@ -203,21 +203,21 @@
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Mision]]></text>
+				<text><![CDATA[Comisión]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="575" y="0" width="28" height="14" uuid="74c7a8b2-df0d-44b1-9da7-6ea69c97576a"/>
+				<reportElement x="575" y="0" width="61" height="14" uuid="74c7a8b2-df0d-44b1-9da7-6ea69c97576a"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Desde]]></text>
+				<text><![CDATA[Fecha Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="643" y="0" width="47" height="14" uuid="3f6adb7e-4a80-402e-9e61-502b038d8bb1"/>
+				<reportElement x="643" y="0" width="65" height="14" uuid="3f6adb7e-4a80-402e-9e61-502b038d8bb1"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Hasta]]></text>
+				<text><![CDATA[Fecha Hasta]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
@@ -231,7 +231,7 @@
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="359" y="0" width="48" height="14" uuid="e7c90728-7e99-444f-809a-ae0cb3efed34"/>
+				<reportElement x="366" y="0" width="48" height="14" uuid="e7c90728-7e99-444f-809a-ae0cb3efed34"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -276,14 +276,14 @@
 	<summary>
 		<band height="25" splitType="Stretch">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="587" y="7" width="128" height="13" backcolor="#FFFFFF" uuid="d6e8039f-e0be-4d17-98f6-ed8f444238dc"/>
+				<reportElement mode="Opaque" x="590" y="7" width="128" height="13" backcolor="#FFFFFF" uuid="d6e8039f-e0be-4d17-98f6-ed8f444238dc"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:    " + $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="93" y="5" width="600" height="1" uuid="93ec930f-20ed-4bf3-bdb8-4b4c946d7e95"/>
+				<reportElement x="93" y="5" width="605" height="1" uuid="93ec930f-20ed-4bf3-bdb8-4b4c946d7e95"/>
 			</line>
 		</band>
 	</summary>
