--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_hijoscapesp.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_hijoscapesp.jrxml
@@ -51,14 +51,14 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	<pageHeader>
 		<band height="92" splitType="Stretch">
 			<textField>
-				<reportElement x="570" y="75" width="80" height="17" uuid="50d7697d-bd9e-42e2-829d-5dfaaf1c7d49"/>
+				<reportElement x="561" y="71" width="80" height="17" uuid="50d7697d-bd9e-42e2-829d-5dfaaf1c7d49"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Página "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="650" y="74" width="40" height="17" uuid="d63d0eb3-1543-473d-a0be-53844c71f01f"/>
+				<reportElement x="641" y="70" width="40" height="17" uuid="d63d0eb3-1543-473d-a0be-53844c71f01f"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -107,14 +107,14 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="598" y="60" width="37" height="17" uuid="f813226a-3dcc-47ee-a8b5-50cf41c5cbc1"/>
+				<reportElement x="589" y="56" width="37" height="17" uuid="f813226a-3dcc-47ee-a8b5-50cf41c5cbc1"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="636" y="60" width="85" height="17" uuid="7431e4b3-ba84-41bd-b766-8c6262d8817c"/>
+				<reportElement x="626" y="54" width="85" height="17" uuid="7431e4b3-ba84-41bd-b766-8c6262d8817c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -125,7 +125,7 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Fecha de Generacion:]]></text>
+				<text><![CDATA[Fecha de Generación:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="104" y="56" width="100" height="17" uuid="f183d9ef-13ec-47b9-9325-700925b66e52"/>
@@ -134,10 +134,6 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 				</textElement>
 				<text><![CDATA[rpt_reporte_einc]]></text>
 			</staticText>
-			<image>
-				<reportElement x="596" y="4" width="70" height="70" uuid="00dcc53f-b5c6-4f41-bd93-d625f80b347c"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
-			</image>
 			<staticText>
 				<reportElement x="334" y="21" width="136" height="17" uuid="0085a72a-8569-443d-85a3-d359fc164b23"/>
 				<textElement>
@@ -153,7 +149,7 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="308" y="5" width="177" height="17" uuid="50f126b6-696d-40a6-9a93-35cd029ae0f1"/>
+				<reportElement x="308" y="5" width="180" height="17" uuid="50f126b6-696d-40a6-9a93-35cd029ae0f1"/>
 				<textElement>
 					<font fontName="Times New Roman" size="10" isBold="false"/>
 				</textElement>
@@ -162,6 +158,10 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 			<image>
 				<reportElement x="95" y="3" width="80" height="70" uuid="0a53ebdf-f527-4f3d-a4d9-5ebcd1482402"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
+			</image>
+			<image>
+				<reportElement x="592" y="0" width="70" height="70" uuid="00dcc53f-b5c6-4f41-bd93-d625f80b347c"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 		</band>
 	</pageHeader>
@@ -180,16 +180,16 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 			<staticText>
 				<reportElement x="388" y="0" width="97" height="17" uuid="a05511e5-1861-4959-a097-bed05db3d284"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Times New Roman" size="10"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Tipo de Discapacidad]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="498" y="0" width="171" height="17" uuid="f9a14dd0-046e-47fc-ab36-2052b06d71cf"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Times New Roman" size="10"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Nombre de Hijo Con Discapacidad]]></text>
+				<text><![CDATA[Nombre de Hijo con Discapacidad]]></text>
 			</staticText>
 			<line>
 				<reportElement x="206" y="0" width="1" height="17" uuid="2b3c3378-6314-4f1f-b469-be94bc2ad8f1"/>
